--- a/pages/bookinground/bookground.html
+++ b/pages/bookinground/bookground.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../../assets/css/bookground.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Noto+Serif+Khojki:wght@500&family=Roboto&display=swap"
         rel="stylesheet">
@@ -20,16 +20,29 @@
 
     <!-- header -->
     <header>
-        <input type="checkbox" id="check" />
+        <input type="checkbox" id="check">
         <label for="check" class="checkbtn">
-            <i class="fa-solid fa-bars"></i></label>
+            <i class="fa-solid fa-bars"></i>
+</label>
         <ul>
-            <li><a href="../../index.html">Home</a> </li>
-            <li class="findplayers"><a href="../player/findplayers.html">Find Players</a></li>
-            <li class="contact"><a href="../../pages/contactus/contact.html">Contact us</a></li>
-            <li><a href="../login/login.html"> <button class="login">Login</button></a></li>
+            <li>
+<a href="../../index.html">Home</a> 
+</li>
+            <li class="findplayers">
+<a href="../player/findplayers.html">Find Players</a>
+</li>
+            <li class="contact">
+<a href="../../pages/contactus/contact.html">Contact us</a>
+</li>
+            <li>
+<a href="../login/login.html">
+ <button class="login">Login</button>
+</a>
+</li>
         </ul>
-        <a href="../../index.html"><img class="logo" src="../../assets/images/Logo.png" alt="Book and play"></a>
+        <a href="../../index.html">
+<img class="logo" src="../../assets/images/Logo.png" alt="Book and play">
+</a>
     </header>
     <!-- header -->
 
@@ -46,13 +59,13 @@
             <option value="Erode">Erode</option>
             <option value="Madurai">Madurai</option>
             <option value="Bangalore">Bangalore</option>
-  
 
         </select>
         <div class="content2">
             <form class="searchnav">
-                <input type="search" placeholder="Search for place,cities,turf,ground names....." id="search2" />
-                <button class="searchbtn" type="submit" aria-label="search"><i
+                <input type="search" placeholder="Search for place,cities,turf,ground names....." id="search2">
+                <button class="searchbtn" type="submit" aria-label="search">
+<i
                         class="fa-solid fa-magnifying-glass"></i></button>
             </form>
         </div>
@@ -265,7 +278,6 @@
                 <img class="sportsicon" src="../../assets/images/footballicon.png" alt="sportsicon">
                 <img class="sportsicon" src="../../assets/images/tennisicon.png"     alt="sportsicon">
 
-
                 </div>
                 <div class="ratings">
                     <i class="fa-solid fa-star"></i>
@@ -359,8 +371,6 @@
             </div>    -->
         </div>
 
-
-
     </div>
     <!-- main3  groundslist -->
     <!-- footer -->
@@ -368,26 +378,49 @@
         <div id="footer1">
             <div class="row">
                 <div class="column1">
-                    <h4 class="foot-heading">Company</h4><br>
+                    <h4 class="foot-heading">Company</h4>
+<br>
 
-                    <p><a href="#">About us</a> </p>
-                    <p><a href="#">Privacy Policy</a></p>
-                    <p><a href="#">Our Service</a></p>
-                    <p><a href="#">Our Clients</a></p>
+                    <p>
+<a href="#">About us</a> 
+</p>
+                    <p>
+<a href="#">Privacy Policy</a>
+</p>
+                    <p>
+<a href="#">Our Service</a>
+</p>
+                    <p>
+<a href="#">Our Clients</a>
+</p>
                 </div>
 
                 <div class="column1">
-                    <h4 class="foot-heading">Get Help</h4><br>
-                    <p><a href="#">FAQ</a> </p>
-                    <p><a href="#">Contact</a></p>
+                    <h4 class="foot-heading">Get Help</h4>
+<br>
+                    <p>
+<a href="#">FAQ</a> 
+</p>
+                    <p>
+<a href="#">Contact</a>
+</p>
                 </div>
 
                 <div class="column1">
-                    <h4 class="foot-heading">Connect us on</h4><br>
-                    <a href="#" aria-label="facebook"> <i class="fa-brands fa-facebook"></i> </a>
-                    <a href="#" aria-label="twitter"> <i class="fa-brands fa-twitter"></i> </a>
-                    <a href="#" aria-label="instagram"> <i class="fa-brands fa-instagram"></i> </a>
-                    <a href="#" aria-label="linkedin"> <i class="fa-brands fa-linkedin"></i> </a>
+                    <h4 class="foot-heading">Connect us on</h4>
+<br>
+                    <a href="#" aria-label="facebook">
+ <i class="fa-brands fa-facebook"></i> 
+</a>
+                    <a href="#" aria-label="twitter">
+ <i class="fa-brands fa-twitter"></i> 
+</a>
+                    <a href="#" aria-label="instagram">
+ <i class="fa-brands fa-instagram"></i> 
+</a>
+                    <a href="#" aria-label="linkedin">
+ <i class="fa-brands fa-linkedin"></i> 
+</a>
 
                 </div>
             </div>
