--- a/pages/bookinground/mybooking.html
+++ b/pages/bookinground/mybooking.html
@@ -10,30 +10,44 @@
     <link rel="stylesheet" href="../../assets/css/mybooking.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Noto+Serif+Khojki:wght@500&family=Roboto&display=swap"
         rel="stylesheet">
 </head>
 
-
 <body>
 
     <!-- header -->
     <header>
-        <input type="checkbox" id="check"/>
+        <input type="checkbox" id="check">
         <label for="check" class="checkbtn">
-          <i class="fa-solid fa-bars"></i></label>
+          <i class="fa-solid fa-bars"></i>
+</label>
         
          <ul>
-         <li><a href="../../index.html">Home</a> </li>
-         <li><a href="../../pages/bookinground/bookground.html">Book Grounds</a></li>
-         <li class="findplayers"><a href="../../pages/player/findplayers.html">Find Players</a></li>
-         <li class="contact "><a href="../../pages/contactus/contact.html">Contact us</a></li>
-         <li><a href="./pages/login/login.html"> <button class="login">Login</button></a></li>
+         <li>
+<a href="../../index.html">Home</a> 
+</li>
+         <li>
+<a href="../../pages/bookinground/bookground.html">Book Grounds</a>
+</li>
+         <li class="findplayers">
+<a href="../../pages/player/findplayers.html">Find Players</a>
+</li>
+         <li class="contact ">
+<a href="../../pages/contactus/contact.html">Contact us</a>
+</li>
+         <li>
+<a href="./pages/login/login.html">
+ <button class="login">Login</button>
+</a>
+</li>
         </ul>
 
-        <a href="../../index.html"><img class="logo" src="../../assets/images/Logo.png" alt="Book and play"></a>
+        <a href="../../index.html">
+<img class="logo" src="../../assets/images/Logo.png" alt="Book and play">
+</a>
     </header>
     <!-- header -->
 
@@ -87,8 +101,6 @@
                     </div>
                     <a href="../../pages/bookinground/ground1.html"><button class="book">Book Now</button></a>
 
-
-
                 </div>
                 <div class="child1">
                     <div class="column1">
@@ -112,12 +124,9 @@
                 </div>
             </div> -->
 
-
         </div>
 
     </div>
-
-
 
     </div>
     <!-- main3  groundslist -->
@@ -126,26 +135,49 @@
         <div id="footer1">
             <div class="row">
                 <div class="column1">
-                    <h4 class="foot-heading">Company</h4><br>
+                    <h4 class="foot-heading">Company</h4>
+<br>
 
-                    <p><a href="#">About us</a> </p>
-                    <p><a href="#">Privacy Policy</a></p>
-                    <p><a href="#">Our Service</a></p>
-                    <p><a href="#">Our Clients</a></p>
+                    <p>
+<a href="#">About us</a> 
+</p>
+                    <p>
+<a href="#">Privacy Policy</a>
+</p>
+                    <p>
+<a href="#">Our Service</a>
+</p>
+                    <p>
+<a href="#">Our Clients</a>
+</p>
                 </div>
 
                 <div class="column1">
-                    <h4 class="foot-heading">Get Help</h4><br>
-                    <p><a href="#">FAQ</a> </p>
-                    <p><a href="#">Contact</a></p>
+                    <h4 class="foot-heading">Get Help</h4>
+<br>
+                    <p>
+<a href="#">FAQ</a> 
+</p>
+                    <p>
+<a href="#">Contact</a>
+</p>
                 </div>
 
                 <div class="column1">
-                    <h4 class="foot-heading">Connect us on</h4><br>
-                    <a href="#" aria-label="facebook"> <i class="fa-brands fa-facebook"></i> </a>
-                    <a href="#" aria-label="twitter"> <i class="fa-brands fa-twitter"></i> </a>
-                    <a href="#" aria-label="instagram"> <i class="fa-brands fa-instagram"></i> </a>
-                    <a href="#" aria-label="linkedin"> <i class="fa-brands fa-linkedin"></i> </a>
+                    <h4 class="foot-heading">Connect us on</h4>
+<br>
+                    <a href="#" aria-label="facebook">
+ <i class="fa-brands fa-facebook"></i> 
+</a>
+                    <a href="#" aria-label="twitter">
+ <i class="fa-brands fa-twitter"></i> 
+</a>
+                    <a href="#" aria-label="instagram">
+ <i class="fa-brands fa-instagram"></i> 
+</a>
+                    <a href="#" aria-label="linkedin">
+ <i class="fa-brands fa-linkedin"></i> 
+</a>
 
                 </div>
             </div>
@@ -153,7 +185,6 @@
     </footer>
     <!-- footer -->
     <script src="../../assets/js/mybooking.js"> </script>
-
 
 </body>
 
