--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="icon" type="image/icon" href="./assets/images/faviicon...png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    crossorigin="anonymous" referrerpolicy="no-referrer">
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Noto+Serif+Khojki:wght@500&family=Roboto&display=swap"
     rel="stylesheet">
@@ -21,19 +21,33 @@
 <body>
   <!-- header -->
   <header>
-    <input type="checkbox" id="check" />
+    <input type="checkbox" id="check">
     <label for="check" class="checkbtn">
-      <i class="fa-solid fa-bars"></i></label>
+      <i class="fa-solid fa-bars"></i>
+</label>
 
     <ul>
-      <li><a href="#">Home</a> </li>
-      <li><a href="./pages/bookinground/bookground.html">Book Grounds</a></li>
-      <li class="findplayers"><a href="./pages/player/findplayers.html">Find Players</a></li>
-      <li class="contact "><a href="./pages/contactus/contact.html">Contact us</a></li>
-      <li><a href="./pages/login/login.html"> <button class="login">Login</button></a></li>
+      <li>
+<a href="#">Home</a> 
+</li>
+      <li>
+<a href="./pages/bookinground/bookground.html">Book Grounds</a>
+</li>
+      <li class="findplayers">
+<a href="./pages/player/findplayers.html">Find Players</a>
+</li>
+      <li class="contact ">
+<a href="./pages/contactus/contact.html">Contact us</a>
+</li>
+      <li>
+<a href="./pages/login/login.html">
+ <button class="login">Login</button>
+</a>
+</li>
     </ul>
-    <a href="/index.html"><img class="logo" src="./assets/images/Logo.png " alt="Book and play"></a>
-
+    <a href="/index.html">
+<img class="logo" src="./assets/images/Logo.png " alt="Book and play">
+</a>
 
   </header>
   <!-- header -->
@@ -45,13 +59,12 @@
 </div> -->
   <div class="maindiv1">
 
-
-
     <div class="center">
       <img class="allsports" src="../../assets/images/allsports.png" alt="Book and play">
 
-
-      <h1 class="word1">Book Your Grounds From Your Place <br><span class="connect"
+      <h1 class="word1">
+Book Your Grounds From Your Place <br>
+<span class="connect"
           style="color:rgb(56, 44, 186)">Connect Players</span></h1>
       <img class="cricketplayer" src="../../assets/images/cricketplayer.png" alt="Book and play">
     </div>
@@ -59,34 +72,24 @@
       <div class="perbox1">
         <img class="profilerounds" src="../../assets/images/profileround.png" alt="Book and play">
 
-
       </div>
       <div class="perbox2">
         <img class="profilerounds" src="../../assets/images/grirlround.png" alt="Book and play">
 
-
       </div>
       <div class="perbox3">
 
-
         <img class="profilerounds3" src="../../assets/images/roundcoach-.png" alt="Book and play">
-
-
 
       </div>
       <div class="perbox4">
         <img class="profilerounds3" src="../../assets/images/avatars_n-.png" alt="Book and play">
 
-
-
       </div>
 
     </div>
 
-
-
     <img class="leftgreen" src="./assets/images/blob-scene-haikei__4_-removebg-preview.png" alt="Book and play">
-
 
     <img class="rightgreen" src="./assets/images/blob-scene-haikei__4_-removebg-previewrigth.png" alt="Book and play">
     </header>
@@ -96,10 +99,8 @@
 
   <!-- main2 what we do -->
 
-
   <div class="maindiv2">
     <img class="design1" src="../../assets/images/sratch1.png" alt="Book and play">
-
 
     <p class="tagline">By Vising Our platform You can get many benefits</p>
 
@@ -187,7 +188,8 @@
 
     </div>
     <div class="contentcolumn">
-      <p class="boldstate">Stay connected to the people</p><br>
+      <p class="boldstate">Stay connected to the people</p>
+<br>
       <p> Build your new friends for playing and conquer the field with an unstoppable sports squad.
         Assemble your team, hone your skills, and dominate the competition in thrilling sports battles.</p>
 
@@ -197,7 +199,6 @@
     <img class="design1" src="../../assets/images/sratch1.png" alt="Book and play">
     <div class="chatcolu">
         <img class="peoplechatting" src="../../assets/images/chatfeature.png" alt="ground">
-
 
     </div>
     <div class="textcolumn">
@@ -210,12 +211,15 @@
   <div class="reviewdiv">
     <div class="review">
       <div class="person">
-        <p>Person1</p><br>
-        <img class="personimg" src="../../assets/images/reviewer1.jpg" alt="person1"><br>
+        <p>Person1</p>
+<br>
+        <img class="personimg" src="../../assets/images/reviewer1.jpg" alt="person1">
+<br>
         <p class="reviewword">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
           ut labore et
           dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-          ex ea commodo consequat.</p><br>
+          ex ea commodo consequat.</p>
+<br>
         <!-- staricon -->
         <div class="star">
           <i class="fa-solid fa-star" style="color: #ffcc00;"></i>
@@ -229,12 +233,15 @@
 
       </div>
       <div class="person">
-        <p>Person2</p><br>
-        <img class="personimg" src="../../assets/images/reviewer2.jpg" alt="person1"><br>
+        <p>Person2</p>
+<br>
+        <img class="personimg" src="../../assets/images/reviewer2.jpg" alt="person1">
+<br>
         <p class="reviewword">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
           ut labore et
           dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-          ex ea commodo consequat.</p><br>
+          ex ea commodo consequat.</p>
+<br>
         <!-- staricon -->
         <div class="star">
           <i class="fa-solid fa-star" style="color: #ffcc00;"></i>
@@ -248,12 +255,15 @@
       </div>
 
       <div class="person">
-        <p>Person3</p><br>
-        <img class="personimg" src="../../assets/images/reviewer3.jpg" alt="person1"><br>
+        <p>Person3</p>
+<br>
+        <img class="personimg" src="../../assets/images/reviewer3.jpg" alt="person1">
+<br>
         <p class="reviewword">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
           ut labore et
           dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-          ex ea commodo consequat.</p><br>
+          ex ea commodo consequat.</p>
+<br>
         <!-- staricon -->
         <div class="star">
           <i class="fa-solid fa-star" style="color: #ffcc00;"></i>
@@ -275,7 +285,6 @@
     <div class="chatcolu">
       <img class="peoplechatting" src="../../assets/images/chatfeature.png" alt="ground">
 
-
     </div>
     <div class="textcolumn">
       <p class="headchat">Interact easily with people by Chating with them</p>
@@ -283,8 +292,6 @@
     </div>
 
   </div>
-
-
 
   <!-- review section -->
   <!-- <div id="review">
@@ -350,34 +357,55 @@
     <div id="footer1">
       <div class="row">
         <div class="column1">
-          <p class="foot-heading">Company</p><br>
-          <p><a href="#">About us</a> </p>
-          <p><a href="#">Privacy Policy</a></p>
-          <p><a href="#">Our Service</a></p>
-          <p><a href="#">Our Clients</a></p>
+          <p class="foot-heading">Company</p>
+<br>
+          <p>
+<a href="#">About us</a> 
+</p>
+          <p>
+<a href="#">Privacy Policy</a>
+</p>
+          <p>
+<a href="#">Our Service</a>
+</p>
+          <p>
+<a href="#">Our Clients</a>
+</p>
         </div>
         <div class="column1">
-          <p class="foot-heading">Get Help</p><br>
+          <p class="foot-heading">Get Help</p>
+<br>
 
-          <p><a href="#">FAQ</a> </p>
-          <p><a href="#">Contact</a></p>
+          <p>
+<a href="#">FAQ</a> 
+</p>
+          <p>
+<a href="#">Contact</a>
+</p>
 
         </div>
         <div class="column1">
-          <p class="foot-heading">Connect us on</p><br>
+          <p class="foot-heading">Connect us on</p>
+<br>
 
-          <a href="#" aria-label="facebook"> <i class="fa-brands fa-facebook"></i> </a>
-          <a href="#" aria-label="twitter"> <i class="fa-brands fa-twitter"></i> </a>
-          <a href="#" aria-label="instagram"> <i class="fa-brands fa-instagram"></i> </a>
-          <a href="#" aria-label="linkedin "> <i class="fa-brands fa-linkedin"></i> </a>
+          <a href="#" aria-label="facebook">
+ <i class="fa-brands fa-facebook"></i> 
+</a>
+          <a href="#" aria-label="twitter">
+ <i class="fa-brands fa-twitter"></i> 
+</a>
+          <a href="#" aria-label="instagram">
+ <i class="fa-brands fa-instagram"></i> 
+</a>
+          <a href="#" aria-label="linkedin ">
+ <i class="fa-brands fa-linkedin"></i> 
+</a>
         </div>
       </div>
     </div>
     <a href="./pages/admin/adminlogin.html" aria-label="linkedin ">Join as a seller </a>
   </footer>
   <!-- footer -->
-
-
 
   <!-- 
          //js  -->
@@ -386,45 +414,37 @@
     console.log(loginUser);
     const loginbtn = document.querySelector(".login")
 
-
     if (loginUser == null) {
 
     }
-    else {
-      if (loginUser !== false) {
-        loginbtn.style.display = "none"
-        const myprofile = document.createElement("button");
-        myprofile.setAttribute("class", "login");
-        myprofile.innerText = "My Account"
-        myprofile.style.width = "150px";
-        myprofile.style.left = "50px"
-        myprofile.addEventListener("click", () => {
-          window.location.href = "../../pages/player/newprofile.html"
-        });
-        document.querySelector(".contact").append(myprofile)
-      }
-      else {
-        loginbtn.style.display = "block"
+    else if (loginUser !== false) {
+    loginbtn.style.display = "none"
+    const myprofile = document.createElement("button");
+    myprofile.setAttribute("class", "login");
+    myprofile.innerText = "My Account"
+    myprofile.style.width = "150px";
+    myprofile.style.left = "50px"
+    myprofile.addEventListener("click", () => {
+      window.location.href = "../../pages/player/newprofile.html"
+    });
+    document.querySelector(".contact").append(myprofile)
+  }
+  else {
+    loginbtn.style.display = "block"
 
+  }
 
-      }
-
-    }
-
-
-    let findplayersbtn = document.querySelector(".findplayers")
+    const findplayersbtn = document.querySelector(".findplayers")
     findplayersbtn.addEventListener("click", (e) => {
       if (!loginUser ) {
     alert("Please login to find players ")
     e.preventDefault();
   }
 
-  else if( loginUser[0]["player_status"] == false){
+  else if( loginUser[0].player_status == false){
     alert("Please join as a player to find players. To join as a player please tick the box on your profile page ");
     e.preventDefault();
   }
-
-
 
       else {
         window.location.href = "./pages/player/findplayers.html";
@@ -435,7 +455,6 @@
       //   e.preventDefault();
       // }
 
-
     })
         //  window.addEventListener("load",()=>{
         //  if(loginUser==false){
@@ -443,7 +462,6 @@
         //     // loginbtn.style.display="none"
         //   }
         // })
-
   </script>
   <script src="./main.js"></script>
 
