--- a/pages/admin/adminlogin.html
+++ b/pages/admin/adminlogin.html
@@ -17,16 +17,23 @@
        
       <h1 class="sign">Seller Sign in</h1>
       <form id="loginform">
-        <input type="email" placeholder="Email address " id="email" aria-label="email"   pattern="^[a-zA-Z0-9][a-zA-Z0-9._%+-]*@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$"><br>
+        <input type="email" placeholder="Email address " id="email" aria-label="email" pattern="^[a-zA-Z0-9][a-zA-Z0-9._%+-]*@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$">
+<br>
         <input type="password" placeholder="Password" id="password" aria-label="password" pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$"
-        title="PLease fill the password with one symbols and Upper case"><br>
+        title="PLease fill the password with one symbols and Upper case">
+<br>
         <!-- <a href="../../index.html"><input type="button" value="Login" id="login" aria-label="button" ></a> -->
-        <button id="login" type="submit">Login</button><br>
-        <a class="fp" href="#">Forget password</a><br>
-        <p class="newsign">New user</p><br>
+        <button id="login" type="submit">Login</button>
+<br>
+        <a class="fp" href="#">Forget password</a>
+<br>
+        <p class="newsign">New user</p>
+<br>
         <!-- <button id="newlogin" type="button" onclick="getData()">Create New Account</button><br> -->
-        <a href="../../pages/admin/adminsignup.html"><input type="button" value="Create New Account" id="newlogin"
-            aria-label="button"/></a><br>
+        <a href="../../pages/admin/adminsignup.html">
+<input type="button" value="Create New Account" id="newlogin"
+            aria-label="button"></a>
+<br>
       </form>
       <!-- signinform -->
     </div>
@@ -35,6 +42,5 @@
   </div>
   <script src="../../assets/js/adminlogin.js"></script>
 </body>
-
 
 </html>
