--- a/pages/admin/adminsignup.html
+++ b/pages/admin/adminsignup.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/icon" href="../../assets/images/faviicon...png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="../../assets/css/signup.css">
 </head>
 
@@ -19,39 +19,55 @@
         <!-- signup form -->
         <div class="forms">
             <!-- <h1>Seller Signup</h1> -->
-            <h1 class="signuphead">Create New Account</h1><br>
+            <h1 class="signuphead">Create New Account</h1>
+<br>
             <form id="signupform">
 
-                <label>Your Name:</label><br>
+                <label>Your Name:</label>
+<br>
                 <div class="boxform">
                     <input type="name" placeholder="Your Name " id="name1" aria-label="name" name="name"
-                    pattern=^[a-zA-Z]{3,20}$ title="the input field  should contains only alphabetic characters (both upper and lower case) and has a length between 3 and 20 characters." required><br>
+                    pattern="^[a-zA-Z]{3,20}$" title="the input field  should contains only alphabetic characters (both upper and lower case) and has a length between 3 and 20 characters." required>
+<br>
 
-                </div><br>
-                <label>Organisation/Ground Name:</label><br>
+                </div>
+<br>
+                <label>Organisation/Ground Name:</label>
+<br>
                 <div class="boxform">
                     <input type="name" placeholder="Your Name " id="name2" aria-label="name" name="name"
-                    pattern="^[a-zA-Z ]{3,50}$" title="the input field  should contains only alphabetic characters (both upper and lower case) and has a length between 3 and 20 characters." required><br>
+                    pattern="^[a-zA-Z ]{3,50}$" title="the input field  should contains only alphabetic characters (both upper and lower case) and has a length between 3 and 20 characters." required>
+<br>
 
-                </div><br>
-                <label>Email:</label><br>
+                </div>
+<br>
+                <label>Email:</label>
+<br>
                 <div class="boxform">
                     <input type="email" placeholder="Email address " id="email" aria-label="email" name="email-id"
-                    pattern="^[a-zA-Z0-9][a-zA-Z0-9._%+-]*@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$"  required><br>
+                    pattern="^[a-zA-Z0-9][a-zA-Z0-9._%+-]*@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$" required>
+<br>
 
-                </div><br>
-                <label>Phone Number:</label><br>
+                </div>
+<br>
+                <label>Phone Number:</label>
+<br>
                 <div class="boxform">
                     <input type="tel" placeholder="Phone Number" id="user_phoneno" aria-label="phone number"
-                        name="mobile-number" required    pattern="[0-9]{10}" title="PLease enter 10 digit number"><br>
+                        name="mobile-number" required pattern="[0-9]{10}" title="PLease enter 10 digit number">
+<br>
 
-                </div><br>
-                <label>Password:</label><br>
+                </div>
+<br>
+                <label>Password:</label>
+<br>
                 <div class="boxform">
                     <input type="password" placeholder="Password" id="password" aria-label="Password" name="password"
-                    pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n\s])(?=.*[A-Z])(?=.*[a-z]).*$" title="Your password must be at least 8 characters long, contain at least one digit or special character, one uppercase letter, and one lowercase letter, and must not contain dots or newline characters and white space character" required><br>
+                    pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n\s])(?=.*[A-Z])(?=.*[a-z]).*$" title="Your password must be at least 8 characters long, contain at least one digit or special character, one uppercase letter, and one lowercase letter, and must not contain dots or newline characters and white space character" required>
+<br>
 
-                </div><br>
+                </div>
+<br>
                 <!-- <label>Proof of business certificate:</label><br> -->
                 <!-- <div class="boxform">
 <input type="file" placeholder="Password" id="poc" aria-label="Password" name="password" title="PLease fill the password with one symbols and Upper case" required><br>
@@ -61,21 +77,16 @@
 
         </div>
 
-
-
-
-
     </div>
-    <button type="submit" id="newlogin">Register</button><br>
+    <button type="submit" id="newlogin">Register</button>
+<br>
     </form>
 
     </div>
     <!-- signup form -->
 
-
     <script src="../../assets/js/adminsignup.js"></script>
 
 </body>
-
 
 </html>
