--- a/pages/admin/groundBooking.html
+++ b/pages/admin/groundBooking.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../../assets/css/groundbookingadmin.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Noto+Serif+Khojki:wght@500&family=Roboto&display=swap"
         rel="stylesheet">
@@ -20,9 +20,10 @@
 
     <!-- header -->
     <header>
-
   
-        <a href="../../index.html"><img class="logo" src="../../assets/images/Logo.png" alt="Book and play"></a>
+        <a href="../../index.html">
+<img class="logo" src="../../assets/images/Logo.png" alt="Book and play">
+</a>
     </header>
     <!-- header -->
 
@@ -80,7 +81,6 @@
                     <div class="box5"></div>
                     <div class="box6"></div>
                     <div class="box7"></div>
-               
 
                 </div> -->
                 <!-- <button id="acceptbtn">Accept</button> -->
@@ -89,8 +89,6 @@
           
         </div>
 
-
-
     </div>
     <!-- main3  groundslist -->
     <!-- footer -->
@@ -98,26 +96,49 @@
         <div id="footer1">
             <div class="row">
                 <div class="column1">
-                    <h4 class="foot-heading">Company</h4><br>
+                    <h4 class="foot-heading">Company</h4>
+<br>
 
-                    <p><a href="#">About us</a> </p>
-                    <p><a href="#">Privacy Policy</a></p>
-                    <p><a href="#">Our Service</a></p>
-                    <p><a href="#">Our Clients</a></p>
+                    <p>
+<a href="#">About us</a> 
+</p>
+                    <p>
+<a href="#">Privacy Policy</a>
+</p>
+                    <p>
+<a href="#">Our Service</a>
+</p>
+                    <p>
+<a href="#">Our Clients</a>
+</p>
                 </div>
 
                 <div class="column1">
-                    <h4 class="foot-heading">Get Help</h4><br>
-                    <p><a href="#">FAQ</a> </p>
-                    <p><a href="#">Contact</a></p>
+                    <h4 class="foot-heading">Get Help</h4>
+<br>
+                    <p>
+<a href="#">FAQ</a> 
+</p>
+                    <p>
+<a href="#">Contact</a>
+</p>
                 </div>
 
                 <div class="column1">
-                    <h4 class="foot-heading">Connect us on</h4><br>
-                    <a href="#" aria-label="facebook"> <i class="fa-brands fa-facebook"></i> </a>
-                    <a href="#" aria-label="twitter"> <i class="fa-brands fa-twitter"></i> </a>
-                    <a href="#" aria-label="instagram"> <i class="fa-brands fa-instagram"></i> </a>
-                    <a href="#" aria-label="linkedin"> <i class="fa-brands fa-linkedin"></i> </a>
+                    <h4 class="foot-heading">Connect us on</h4>
+<br>
+                    <a href="#" aria-label="facebook">
+ <i class="fa-brands fa-facebook"></i> 
+</a>
+                    <a href="#" aria-label="twitter">
+ <i class="fa-brands fa-twitter"></i> 
+</a>
+                    <a href="#" aria-label="instagram">
+ <i class="fa-brands fa-instagram"></i> 
+</a>
+                    <a href="#" aria-label="linkedin">
+ <i class="fa-brands fa-linkedin"></i> 
+</a>
 
                 </div>
             </div>
@@ -125,7 +146,6 @@
     </footer>
     <!-- footer -->
     <script src="../../assets/js/groundbookingadmin.js"> </script>
-
 
 </body>
 
