--- a/pages/contactus/contact.html
+++ b/pages/contactus/contact.html
@@ -139,12 +139,12 @@
     <img class="assistant"src="../../assets/images/assistant.png" alt="assitant">
     <p class="messageto">Ask booking and joining related queries</p>
 
-    <p class="noti">* Your conversation is not started Say hello to get started</p>
-    <p class="messagefrom">Hello</p>
+    <p class="noti">* Your conversation is not started please click the popop circle to connect with us and  get started</p>
+  
 </div>
 <div class="bottom">
     <form id="sendbtn">
-<input type="text" placeholder="Send message" id="message">
+<input type="text" placeholder="Send message Using right side popup circle" id="message">
 <button id="send button">
 <i class="bx bx-send"></i>
 </button>
