--- a/pages/admin/adminsignup.html
+++ b/pages/admin/adminsignup.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +11,6 @@
         crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="../../assets/css/signup.css">
 </head>
-
 <body>
     <!-- signup container -->
     <div id="container">
@@ -64,6 +62,9 @@
                 <div class="boxform">
                     <input type="password" placeholder="Password" id="password" aria-label="Password" name="password"
                     pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n\s])(?=.*[A-Z])(?=.*[a-z]).*$" title="Your password must be at least 8 characters long, contain at least one digit or special character, one uppercase letter, and one lowercase letter, and must not contain dots or newline characters and white space character" required>
+                    <span class="eyesym">
+                        <i class="fa-regular fa-eye-slash"></i>
+                    </span>
 <br>
 
                 </div>
