--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@ Book Your Grounds From Your Place <br>
     const loginbtn = document.querySelector(".login")
 
     if (loginUser == null) {
-
+// nothing
     }
     else if (loginUser !== false) {
     loginbtn.style.display = "none"
