--- a/pages/admin/adminproduct.html
+++ b/pages/admin/adminproduct.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New profile
+    <title>Your profile
     </title>
     <link rel="stylesheet" href="../../assets/css/admindashboard.css">
     <link
@@ -18,6 +18,7 @@
         integrity="sha512-pVCM5+SN2+qwj36KonHToF2p1oIvoU3bsqxphdOIWMYmgr4ZqD3t5DjKvvetKhXGc/ZG5REYTT6ltKfExEei/Q=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <link rel="icon" type="image/icon" href="../../assets/images/faviicon...png">
     <!-- <link rel="stylesheet" href="https://cdn.mobiscroll.com/3.2.0/css/mobiscroll.min.css"> -->
 
     <!-- <link href="../../assets/css/mobiscroll.javascript.min.css" rel="stylesheet" /> -->
@@ -57,13 +58,13 @@
                     <a href="../../pages/admin/groundBooking.html">
                         <div class="message">
                             <i class="fa-solid fa-message"></i>
-                            <span>Online Booking</span>
+                            <span>Bookings</span>
                         </div>
                     </a>
-                    <div class="bookinghistory">
+                    <!-- <div class="bookinghistory">
                         <i class="bx bx-history"></i>
                         <span>Cash booking</span>
-                    </div>
+                    </div> -->
                     <a href="../../pages/admin/myground.html">
                         <div class="analytics">
                             <i class="bx bxs-analyse"></i>
