--- a/pages/bookinground/bookground.html
+++ b/pages/bookinground/bookground.html
@@ -23,26 +23,26 @@
         <input type="checkbox" id="check">
         <label for="check" class="checkbtn">
             <i class="fa-solid fa-bars"></i>
-</label>
+        </label>
         <ul>
             <li>
-<a href="../../index.html">Home</a> 
-</li>
+                <a href="../../index.html">Home</a>
+            </li>
             <li class="findplayers">
-<a href="../player/findplayers.html">Find Players</a>
-</li>
+                <a href="../player/findplayers.html">Find Players</a>
+            </li>
             <li class="contact">
-<a href="../../pages/contactus/contact.html">Contact us</a>
-</li>
+                <a href="../../pages/contactus/contact.html">Contact us</a>
+            </li>
             <li>
-<a href="../login/login.html">
- <button class="login">Login</button>
-</a>
-</li>
+                <a href="../login/login.html">
+                    <button class="login">Login</button>
+                </a>
+            </li>
         </ul>
         <a href="../../index.html">
-<img class="logo" src="../../assets/images/Logo.png" alt="Book and play">
-</a>
+            <img class="logo" src="../../assets/images/Logo.png" alt="Book and play">
+        </a>
     </header>
     <!-- header -->
 
@@ -65,8 +65,7 @@
             <form class="searchnav">
                 <input type="search" placeholder="Search for place,cities,turf,ground names....." id="search2">
                 <button class="searchbtn" type="submit" aria-label="search">
-<i
-                        class="fa-solid fa-magnifying-glass"></i></button>
+                    <i class="fa-solid fa-magnifying-glass"></i></button>
             </form>
         </div>
     </div>
@@ -379,48 +378,48 @@
             <div class="row">
                 <div class="column1">
                     <h4 class="foot-heading">Company</h4>
-<br>
+                    <br>
 
                     <p>
-<a href="#">About us</a> 
-</p>
+                        <a href="#">About us</a>
+                    </p>
                     <p>
-<a href="#">Privacy Policy</a>
-</p>
+                        <a href="#">Privacy Policy</a>
+                    </p>
                     <p>
-<a href="#">Our Service</a>
-</p>
+                        <a href="#">Our Service</a>
+                    </p>
                     <p>
-<a href="#">Our Clients</a>
-</p>
+                        <a href="#">Our Clients</a>
+                    </p>
                 </div>
 
                 <div class="column1">
                     <h4 class="foot-heading">Get Help</h4>
-<br>
+                    <br>
                     <p>
-<a href="#">FAQ</a> 
-</p>
+                        <a href="#">FAQ</a>
+                    </p>
                     <p>
-<a href="#">Contact</a>
-</p>
+                        <a href="#">Contact</a>
+                    </p>
                 </div>
 
                 <div class="column1">
                     <h4 class="foot-heading">Connect us on</h4>
-<br>
+                    <br>
                     <a href="#" aria-label="facebook">
- <i class="fa-brands fa-facebook"></i> 
-</a>
+                        <i class="fa-brands fa-facebook"></i>
+                    </a>
                     <a href="#" aria-label="twitter">
- <i class="fa-brands fa-twitter"></i> 
-</a>
+                        <i class="fa-brands fa-twitter"></i>
+                    </a>
                     <a href="#" aria-label="instagram">
- <i class="fa-brands fa-instagram"></i> 
-</a>
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
                     <a href="#" aria-label="linkedin">
- <i class="fa-brands fa-linkedin"></i> 
-</a>
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
 
                 </div>
             </div>
