--- a/pages/player/playermessages.html
+++ b/pages/player/playermessages.html
@@ -19,7 +19,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/boxicons/2.1.0/css/boxicons.min.css" integrity="sha512-pVCM5+SN2+qwj36KonHToF2p1oIvoU3bsqxphdOIWMYmgr4ZqD3t5DjKvvetKhXGc/ZG5REYTT6ltKfExEei/Q==" crossorigin="anonymous" referrerpolicy="no-referrer"> 
 
 </head>
+
 <body>
+
     <div class="maincontainer">
 
     <div class="side2">
@@ -32,6 +34,22 @@
                         </div>
           
         </div></a> -->
+
+        <!-- <a href="../../index.html">
+            <div class="propage">
+                <i class="fa-solid fa-user" style="color: #ffffff;"></i>
+                <span>Back to your profile</span>
+            </div>
+        </a> -->
+
+        <a class="anpro" href="./newprofile.html">
+            <div class="propage">
+                <i class="bx bx-log-out">
+                </i>
+                <span>Exit</span>
+            </div>
+        </a>
+        <h3 class="logoletter">Book and Play</h3>
 
     </div>
     <div class="side3chatmain">
