--- a/pages/admin/myground.html
+++ b/pages/admin/myground.html
@@ -36,7 +36,7 @@
                     <input type="name" placeholder="Ground Name " id="groname" aria-label="name"
                         pattern="^[a-zA-Z ]{3,50}$"
                         title="the input field  should contains only alphabetic characters (both upper and lower case) and has a length between 3 and 50 characters."
-                        required>
+                        required disabled>
                     <br>
                 </div>
 
@@ -44,7 +44,7 @@
                 <input type="name" placeholder="Ground Location" id="grolname" aria-label="name"
                     pattern="^[a-zA-Z ]{3,60}$"
                     title="the input field  should contains only alphabetic characters (both upper and lower case) and has a length between 3 and 60 characters."
-                    required>
+                    required disabled>
                 <br>
             </div>
 
@@ -53,16 +53,16 @@
                 <label class="labelname"> Ground Address:</label>
                 <input type="name" placeholder="Ground Location" id="groaddress" aria-label="name"
                     pattern="^[a-zA-Z0-9!@#$%^&*()_+\-=\[\]{};':&quot;\\|,.<>\/?~` ]{3,400}$"
-                    title="Please enter a valid input (letters and spaces only, between 3 to 400 characters)" required>
+                    title="Please enter a valid input (letters and spaces only, between 3 to 400 characters)" required disabled>
                 <br>
                 <label class="labelnamell"> Ground Location Link:</label>
-                <input type="url" placeholder="Ground Location" id="grolink" aria-label="name" required>
+                <input type="url" placeholder="Ground Location" id="grolink" aria-label="name" required disabled>
                 <br>
 
             </div>
             <div class="values">
                 <p class="dis">Distict</p>
-                <select id="sportsvalue" required>
+                <select id="sportsvalue" required disabled>
                     <option value="Chennai">Chennai</option>
                     <option value="Coimbatore">Coimbatore</option>
                     <option value="Salem">Salem</option>
@@ -74,11 +74,11 @@
             <div class="groundimageupload">
                 <label class="labelnamei"> Upload your Ground images:</label>
                 <br>
-                <input type="url" placeholder="Upload " id="grimg1" aria-label="groundimg" required>
+                <input type="url" placeholder="Upload " id="grimg1" aria-label="groundimg" required disabled>
                 <br>
-                <input type="url" placeholder="Upload " id="grimg2" aria-label="groundimg" required>
+                <input type="url" placeholder="Upload " id="grimg2" aria-label="groundimg" required disabled>
                 <br>
-                <input type="url" placeholder="Upload " id="grimg3" aria-label="groundimg" required>
+                <input type="url" placeholder="Upload " id="grimg3" aria-label="groundimg" required disabled>
                 <br>
 
             </div>
@@ -89,13 +89,13 @@
             <div class="sportsavailable">
                 <label class="labelnames"> Sports Available:</label>
                 <br>
-                <input type="checkbox" id="sportsavail1" aria-label="sportsavail" value="Cricket">
+                <input type="checkbox" id="sportsavail1" aria-label="sportsavail" value="Cricket" disabled>
                 <label class="sname">Cricket</label>
                 <br>
-                <input type="checkbox" id="sportsavail2" aria-label="sportsavail" value="Football">
+                <input type="checkbox" id="sportsavail2" aria-label="sportsavail" value="Football" disabled>
                 <label class="sname">Football</label>
                 <br>
-                <input type="checkbox" id="sportsavail3" aria-label="sportsavail" value="Tennis">
+                <input type="checkbox" id="sportsavail3" aria-label="sportsavail" value="Tennis" disabled>
                 <label class="sname">Tennis</label>
                 <br>
 
@@ -107,8 +107,8 @@
                     <input type="time" id="timingsfrom" aria-label="sportsavail" pattern="(0[1-9]|1[0-2]):[0-5][0-9] (am|pm)" required>
                     <p>To</p>
                     <input type="time" id="timingsto" aria-label="sportsavail"required > -->
-               <span>Start Time: </span>  <input type="text" id="startTime" required placeholder="12:00"><br
-               <span> End Time: </span> <input type="text" id="endTime" required placeholder="12:00">
+               <span>Start Time: </span>  <input type="text" id="startTime" required placeholder="12:00" disabled><br
+               <span> End Time: </span> <input type="text" id="endTime" required placeholder="12:00" disabled>
 
             </div>
 
@@ -117,7 +117,7 @@
                 <br>
                 <textarea id="rules" pattern="^[a-zA-Z0-9\s]{3,600}$"
                     title="Please enter a valid input (letters, numbers and spaces only, between 3 to 600 characters)"
-                    rows="8" cols="30" required>
+                    rows="8" cols="30" required disabled>
 </textarea>
                 <br>
             </div>
@@ -127,7 +127,7 @@
                 <br>
                 <input type="number" id="amount" aria-label="sportsavail"
                     pattern="^([1-4][0-9]{2}|5000|[1-9][0-9]|[1-9])$" title="Please enter a number between 1 and 5000"
-                    required>
+                    required disabled>
                 <br>
 
             </div>
@@ -137,7 +137,7 @@
                 <br>
                 <input type="number" id="increaseamount" aria-label="sportsavail"
                     pattern="^([1-4][0-9]{2}|5000|[1-9][0-9]|[1-9])$" title="Please enter a number between 1 and 5000"
-                    required>
+                    required disabled>
                 <br>
 
             </div>
@@ -145,7 +145,7 @@
 
                 <label class="court">Courts Available</label>
                 <br>
-                <select id="sportscourts" required>
+                <select id="sportscourts" required disabled>
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -157,6 +157,7 @@
             </div>
 
             <div class="buttonsbox">
+                <button type="button" id="editbtn">Edit</button>
                 <button type="submit" id="updatebtn">Update</button>
 
                 <button type="submit" id="deletebtn">Disable</button>
