--- a/pages/admin/adminproduct.html
+++ b/pages/admin/adminproduct.html
@@ -44,7 +44,7 @@
 
                     </div>
 
-                    <button id="editbutton">Edit Profile</button>
+                    <!-- <button id="editbutton">Edit Profile</button> -->
                     <button class="fillbutton">Fill your ground</button>
                 </div>
                 <div class="hr">
