--- a/pages/bookinground/mybooking.html
+++ b/pages/bookinground/mybooking.html
@@ -185,6 +185,7 @@
         </div>
     </footer>
     <!-- footer -->
+    <script src=" https://smtpjs.com/v3/smtp.js"></script>
     <script src="../../assets/js/mybooking.js"> </script>
 
 </body>
