--- a/pages/admin/groundBooking.html
+++ b/pages/admin/groundBooking.html
@@ -145,6 +145,7 @@
         </div>
     </footer>
     <!-- footer -->
+    <script src=" https://smtpjs.com/v3/smtp.js"></script>
     <script src="../../assets/js/groundbookingadmin.js"> </script>
 
 </body>
