--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       <li>
 <a href="./pages/bookinground/bookground.html">Book Grounds</a>
 </li>
-      <li class="findplayers">
-<a href="./pages/player/findplayers.html">Find Players</a>
+      <li >
+<a class="findplayers" href="./pages/player/findplayers.html">Find Players</a>
 </li>
       <li class="contact ">
 <a href="./pages/contactus/contact.html">Contact us</a>
@@ -415,6 +415,8 @@ Book Your Grounds From Your Place <br>
   <!-- 
          //js  -->
   <script>
+
+    // for changing login into my account
     const loginUser = JSON.parse(localStorage.getItem("user_logged_in"));
     console.log(loginUser);
     const loginbtn = document.querySelector(".login")
@@ -438,7 +440,7 @@ Book Your Grounds From Your Place <br>
     loginbtn.style.display = "block"
 
   }
-
+// checking the user is player
     const findplayersbtn = document.querySelector(".findplayers")
     findplayersbtn.addEventListener("click", (e) => {
       if (!loginUser ) {
