--- a/pages/bookinground/bookground.html
+++ b/pages/bookinground/bookground.html
@@ -28,8 +28,8 @@
             <li>
                 <a href="../../index.html">Home</a>
             </li>
-            <li class="findplayers">
-                <a href="../player/findplayers.html">Find Players</a>
+            <li>
+                <a  class="findplayers" href="../player/findplayers.html">Find Players</a>
             </li>
             <li class="contact">
                 <a href="../../pages/contactus/contact.html">Contact us</a>
