--- a/pages/contactus/contact.html
+++ b/pages/contactus/contact.html
@@ -49,8 +49,8 @@
     <li>
 <a href="../../pages/bookinground/bookground.html">Book Grounds</a>
 </li>
-    <li class="findplayers">
-<a href="../../pages/player/findplayers.html">Find Players</a>
+    <li>
+<a  class="findplayers"  href="../../pages/player/findplayers.html">Find Players</a>
 </li>
     <!-- <li class="contact"><a href="./pages/contactus/contact.html">Contact us</a></li> -->
     <li>
